fix: update progress bar background color for improved visibility

--- a/src/styles/overrides/primeng.css
+++ b/src/styles/overrides/primeng.css
@@ -5,7 +5,7 @@
 
 /* Progess Bar */
 .p-progressbar {
-  @apply bg-primary-100 rounded-none;
+  @apply bg-primary-200 rounded-none;
 }
 
 .p-progressbar-value {
